kubernetes/edusoho-pvc/edusoho-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edusoho-db
  namespace: edusoho
spec:
  selector:
    matchLabels:
      app: edusoho-db
  template:
    metadata:
      labels:
        app: edusoho-db
    spec:
      containers:
        - name: edusoho-db
          image: mysql/mysql-server:8.0.23-1.1.19
          args:
            - --default-authentication-plugin=mysql_native_password
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-pvc
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc
