kubernetes/edusoho-pvc/edusoho-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edusoho-nginx
  namespace: edusoho
spec:
  selector:
    matchLabels:
      app: edusoho-nginx
  template:
    metadata:
      labels:
        app: edusoho-nginx
    spec:
      containers:
        - name: edusoho-nginx
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - mountPath: /var/www
              name: www-pvc
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-cm
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: edusoho.conf
              name: nginx-vhost-cm
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "nginx -s stop"]
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/"
              port: nginx-port
          # livenessProbe:
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 3
          #   periodSeconds: 30
          #   httpGet:
          #     path: "/"
          #     port: nginx-port
      volumes:
        - name: www-pvc
          persistentVolumeClaim:
            claimName: www-pvc
        - name: nginx-cm
          configMap:
            name: nginx-cm
        - name: nginx-vhost-cm
          configMap:
            name: nginx-vhost-cm
