kubernetes/edusoho-pvc/edusoho-php.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edusoho-php
  namespace: edusoho
spec:
  replicas: 3
  selector:
    matchLabels:
      app: edusoho-php
  template:
    metadata:
      labels:
        app: edusoho-php
    spec:
      containers:
        - name: edusoho-php
          image: registry.cn-hangzhou.aliyuncs.com/edusoho-1/php-fpm:7.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "1000m"
          ports:
            - containerPort: 9000
              name: php-port
          volumeMounts:
            - mountPath: /var/www
              name: www-pvc
          livenessProbe:
            tcpSocket:
              port: php-port
            periodSeconds: 5
            initialDelaySeconds: 10
      volumes:
        - name: www-pvc
          persistentVolumeClaim:
            claimName: www-pvc
