kubernetes/edusoho-pvc/edusoho-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
  namespace: edusoho
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
